<resources>
    <string name="app_name">English For Kids</string>
    <string name="welcome_to">Welcome to</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="done">Done</string>
    <string name="viet_nam">Việt Nam</string>
    <string name="english">English</string>
    <string name="display_language">Display language</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="sign_in_by_facebook">Sign in by Facebook</string>
    <string name="sign_in_by_google">Sign in by Google</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="verification">Verification</string>
    <string name="verification_des">"Enter the verify code that was send to your email"</string>
    <string name="confirm">Confirm</string>
    <string name="new_pasword">New Pasword</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_email">Send Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello</string>

</resources>