<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/im_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="37dp"
        android:src="@drawable/ic_btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/im_cute_as"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/im_cute_as"
        app:layout_constraintBottom_toTopOf="@id/tv_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="470dp"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />


    <FrameLayout
        android:id="@+id/fr_email"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/fr_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/btn_2"
            android:gravity="center"
            tools:ignore="UselessParent">

            <android.inputmethodservice.ExtractEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="35dp"
                android:textColor="@color/gray"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck,VisualLintTextFieldSize,TextContrastCheck" />
        </TableRow>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fr_pass"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/tr_forgot_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/btn_2"
            android:gravity="center"
            tools:ignore="UselessParent">

            <android.inputmethodservice.ExtractEditText
                android:id="@+id/edt_pass"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:hint="@string/password"
                android:inputType="textVisiblePassword"
                android:paddingStart="35dp"
                android:textColor="@color/gray"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <ImageView
                android:id="@+id/im_eye"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:src="@drawable/im_eye"
                tools:ignore="ContentDescription,ImageContrastCheck" />

        </TableRow>
    </FrameLayout>

    <TableRow
        android:id="@+id/tr_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry">

        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="center"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <View
            android:layout_width="80dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="center|end"
            android:paddingEnd="20dp"
            android:text="@string/forgot_pass"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    </TableRow>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/btn_1"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tr_dont_have_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck,VisualLintButtonSize,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <TableRow
        android:id="@+id/tr_dont_have_acc"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="center"
            android:text="@string/don_t_have_account"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    </TableRow>

    <View
        android:id="@+id/view_line"
        android:layout_width="43dp"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableRow
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tableRow">

        <View
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:background="@color/white" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/btn_2"
        android:elevation="5dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tr_gg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="20dp"
            android:src="@drawable/im_fb"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="center"
            android:text="@string/sign_in_by_facebook"
            android:textColor="@color/blue_2"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <View
            android:layout_width="53dp"
            android:layout_height="match_parent" />

    </TableRow>

    <TableRow
        android:id="@+id/tr_gg"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/btn_2"
        android:elevation="5dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="20dp"
            android:src="@drawable/im_google"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="center"
            android:text="@string/sign_in_by_google"
            android:textColor="@color/red_2"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="53dp"
            android:layout_height="match_parent" />

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>