<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/im_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/im_cute_as"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/im_cute_as"
        app:layout_constraintBottom_toTopOf="@id/tv_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="470dp"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:text="@string/display_language"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TableRow
        android:id="@+id/tr_viet"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_2"
        android:elevation="5dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tr_eng"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="53dp"
            android:layout_height="36dp"
            android:layout_margin="20dp"
            android:src="@drawable/img_vietnam"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="center"
            android:text="@string/viet_nam"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="53dp"
            android:layout_height="match_parent" />


    </TableRow>

    <TableRow
        android:id="@+id/tr_eng"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="210dp"
        android:background="@drawable/btn_2"
        android:elevation="5dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/btn_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="53dp"
            android:layout_height="36dp"
            android:layout_margin="20dp"
            android:src="@drawable/img_usa"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="center"
            android:text="@string/english"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="53dp"
            android:layout_height="match_parent" />


    </TableRow>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_1"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>