<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/im_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="37dp"
        android:src="@drawable/ic_btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/im_cute_as"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/im_cute_as"
        app:layout_constraintBottom_toTopOf="@+id/tv_new_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="470dp"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <FrameLayout
        android:id="@+id/fr_pass"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_pass">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/btn_2"
            android:gravity="center"
            tools:ignore="UselessParent">

            <android.inputmethodservice.ExtractEditText
                android:id="@+id/edt_pass"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:hint="@string/password"
                android:inputType="textVisiblePassword"
                android:paddingStart="35dp"
                android:textColor="@color/gray"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        </TableRow>
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_1"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/send_email"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr_pass"
        tools:ignore="TextSizeCheck,VisualLintButtonSize,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>