<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/im_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="37dp"
        android:src="@drawable/ic_btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/im_cute_as"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/im_cute_as"
        app:layout_constraintBottom_toTopOf="@id/tv_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="470dp"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />


    <FrameLayout
        android:id="@+id/fr_email"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="405dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/btn_2"
            android:gravity="center"
            tools:ignore="UselessParent">


            <EditText
                android:id="@+id/edt_mail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_2"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintHeight_default="wrap"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        </TableRow>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fr_pass"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/fr_pass_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/btn_2"
            android:gravity="center"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/edt_pass"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:background="@drawable/btn_2"
                android:focusable="true"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <ImageView
                android:id="@+id/im_eye"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/im_eye"
                tools:ignore="ContentDescription,ImageContrastCheck" />

        </TableRow>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fr_pass_confirm"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/btn_2"
            android:gravity="center"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/edt_conf_pass"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:background="@drawable/btn_2"
                android:fitsSystemWindows="true"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <ImageView
                android:id="@+id/iv_eye_conf"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/im_eye"
                tools:ignore="ContentDescription,ImageContrastCheck" />

        </TableRow>

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/btn_1"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>